# todo-app

./: db.sqlite3  manage.py  pyproject.toml
backup/: db.sqlite3
services/: admin.py  choices.py  forms.py  mixins.py  models.py  search.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_profile_team_alter_progress_progress.py
services/templates/profile/: index.html
services/templates/services/: CreateWork.html  ViewAllWorks.html  ViewWork.html  home.html  landing_page.html  progress_update.html
zportal/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
zportal/static/css/: bootstrap.css
zportal/templates/: base.html
